--- a/shop.html
+++ b/shop.html
@@ -10,6 +10,9 @@
      <img src="./file/GroupFDDDD.svg" class="settening">
      <input placeholder="Шукати..." class="Intup">
     </header>
+    <div class="buy">
+        <button class="ButtonBuy">Купити</button>
+    </div>
 </body>
 
 </html>
