--- a/shop.html
+++ b/shop.html
@@ -10,9 +10,11 @@
      <img src="./file/GroupFDDDD.svg" class="settening">
      <input placeholder="Шукати..." class="Intup">
     </header>
-    <div class="buy">
-        <button class="ButtonBuy">Купити</button>
+    
+    <div class="buy1">
+      <img src="https://images.shafastatic.net/129830118" class="towar">
+      <button class="BuyBatt">Купити</button>
     </div>
-</body>
+    </body>
 
 </html>
