--- a/shop.html
+++ b/shop.html
@@ -15,6 +15,18 @@
       <img src="https://images.shafastatic.net/129830118" class="towar">
       <button class="BuyBatt">Купити</button>
     </div>
+    <div class="buy1">
+      <img src="https://tktimport.com/pictures/83892.jpg" class="towar">
+      <button class="BuyBatt">Купити</button>
+    </div>
+    <div class="buy1">
+      <img src="https://images.prom.ua/2324896260_belaya-futbolka-s.jpg" class="towar">
+      <button class="BuyBatt">Купити</button>
+    </div>
+    <div class="buy1">
+      <img src="https://images.prom.ua/2324896260_belaya-futbolka-s.jpg" class="towar">
+      <button class="BuyBatt">Купити</button>
+    </div>
     </body>
 
 </html>
