--- a/shop.html
+++ b/shop.html
@@ -11,6 +11,10 @@
      <input placeholder="Шукати..." class="Intup">
     </header>
     
+<button class="menu"><a href="./Polygon 1.svg"></a></button>
+
+
+
     <div class="buy1">
       <img src="https://images.shafastatic.net/129830118" class="towar">
       <button class="BuyBatt">Купити</button>
@@ -25,6 +29,10 @@
     </div>
     <div class="buy1">
       <img src="https://images.prom.ua/2324896260_belaya-futbolka-s.jpg" class="towar">
+      <button class="BuyBatt">Купити</button>
+    </div>
+    <div class="buy1">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTFFHh5tKlJWPb6pzeuNeJQu49B92XBSvJQCw&usqp=CAU" class="towar">
       <button class="BuyBatt">Купити</button>
     </div>
     </body>
