--- a/shop.html
+++ b/shop.html
@@ -11,13 +11,14 @@
      <input placeholder="Шукати..." class="Intup">
     </header>
     
-<button class="menu"><a href="./Polygon 1.svg"></a></button>
+
 
 
 
     <div class="buy1">
-      <img src="https://images.shafastatic.net/129830118" class="towar">
-      <button class="BuyBatt">Купити</button>
+        <img src="https://images.shafastatic.net/129830118" class="towar">
+        <button class="BuyBatt">Купити</button>   
+        <p class="Money">199₴</p>
     </div>
     <div class="buy1">
       <img src="https://tktimport.com/pictures/83892.jpg" class="towar">
@@ -27,14 +28,14 @@
       <img src="https://images.prom.ua/2324896260_belaya-futbolka-s.jpg" class="towar">
       <button class="BuyBatt">Купити</button>
     </div>
-    <div class="buy1">
+     <div class="buy1">
       <img src="https://images.prom.ua/2324896260_belaya-futbolka-s.jpg" class="towar">
       <button class="BuyBatt">Купити</button>
-    </div>
-    <div class="buy1">
+     </div>
+     <div class="buy1">
       <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTFFHh5tKlJWPb6pzeuNeJQu49B92XBSvJQCw&usqp=CAU" class="towar">
       <button class="BuyBatt">Купити</button>
-    </div>
+     </div>
     </body>
 
 </html>
