--- a/golov.html
+++ b/golov.html
@@ -6,11 +6,10 @@
   <body>
      <header class="head">
         <img src="./file/Group (1).svg" class="logo">
-        <p class="Cate">Головна</p>
-        <p class="cate">Про нас</p>
-        <p class="cate">Товар</p>
-        <p class="cate">Підтримка</p>
+        <input class="Input" type="Шукати..">
+        <button class="ButtonInput"><img src="./file/Button.svg"></button>
+        <p>a</p>
      </header>
-    >
+    
   </body>
 </html>
